--- a/TestaCache/TestaCache.csproj
+++ b/TestaCache/TestaCache.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\PostSharp.5.0.41\build\PostSharp.props" Condition="Exists('..\packages\PostSharp.5.0.41\build\PostSharp.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -11,6 +12,8 @@
     <AssemblyName>TestaCache</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,6 +34,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json.Bson, Version=1.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.Bson.1.0.1\lib\net45\Newtonsoft.Json.Bson.dll</HintPath>
+    </Reference>
+    <Reference Include="PostSharp, Version=5.0.41.0, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
+      <HintPath>..\packages\PostSharp.Redist.5.0.41\lib\net45\PostSharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="StackExchange.Redis, Version=1.2.6.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\StackExchange.Redis.1.2.6\lib\net46\StackExchange.Redis.dll</HintPath>
     </Reference>
@@ -40,40 +53,26 @@
     <Reference Include="System.Runtime.Caching" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AOP\Aspects\AdviceArgs.cs" />
-    <Compile Include="AOP\Aspects\Arguments.cs" />
-    <Compile Include="AOP\Aspects\Aspect.cs" />
-    <Compile Include="AOP\Aspects\FlowBehavior.cs" />
-    <Compile Include="AOP\Aspects\IAspect.cs" />
-    <Compile Include="AOP\Aspects\ILocationInterceptionAspect.cs" />
-    <Compile Include="AOP\Aspects\IMethodAspect.cs" />
-    <Compile Include="AOP\Aspects\LocationInterceptionArgs.cs" />
-    <Compile Include="AOP\Aspects\LocationInterceptionAspect.cs" />
-    <Compile Include="AOP\Aspects\MethodArgs.cs" />
-    <Compile Include="AOP\Aspects\MethodExecutionArgs.cs" />
-    <Compile Include="AOP\Aspects\MethodInterceptionArgs.cs" />
-    <Compile Include="AOP\Aspects\MethodInterceptionAspect.cs" />
-    <Compile Include="AOP\Aspects\OnMethodBoundaryAspect.cs" />
-    <Compile Include="AOP\AspectWeaver.cs" />
-    <Compile Include="AOP\Core\DelegateFactory.cs" />
-    <Compile Include="AOP\Core\Methods\ActionInterceptionArgs.cs" />
-    <Compile Include="AOP\Core\Methods\ActionInterceptionRefArgs.cs" />
-    <Compile Include="AOP\Core\Methods\BoundaryAspectGenerator.cs" />
-    <Compile Include="AOP\Core\Methods\FuncInterceptionArgs.cs" />
-    <Compile Include="AOP\Core\Methods\FuncInterceptionRefArgs.cs" />
-    <Compile Include="AOP\Core\Methods\InterceptionAspectGenerator.cs" />
-    <Compile Include="AOP\Core\Methods\RefArgsExtensions.cs" />
-    <Compile Include="AOP\Core\Properties\GetterGenerator.cs" />
-    <Compile Include="AOP\Core\Properties\PropertyInterceptionArgs.cs" />
-    <Compile Include="AOP\Core\Properties\SetterGenerator.cs" />
     <Compile Include="Cache\AffectedCacheableMethodsAttribute.cs" />
     <Compile Include="Cache\CacheableResultAttribute.cs" />
     <Compile Include="Cache\ClearFullCacheAttribute.cs" />
     <Compile Include="Cache\MethodResultCache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Redis\RedisCacheableResultAttribute.cs" />
+    <Compile Include="Redis\RedisConnectorHelper.cs" />
+    <Compile Include="Redis\RedisDictionary.cs" />
+    <Compile Include="Redis\RedisList.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\PostSharp.5.0.41\build\PostSharp.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\PostSharp.5.0.41\build\PostSharp.props'))" />
+    <Error Condition="!Exists('..\packages\PostSharp.5.0.41\build\PostSharp.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\PostSharp.5.0.41\build\PostSharp.targets'))" />
+  </Target>
+  <Import Project="..\packages\PostSharp.5.0.41\build\PostSharp.targets" Condition="Exists('..\packages\PostSharp.5.0.41\build\PostSharp.targets')" />
 </Project>
