--- a/CacheApi/packages.config
+++ b/CacheApi/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="KingAOP" version="1.0.0" targetFramework="net461" />
   <package id="Nancy" version="1.4.4" targetFramework="net461" />
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="PostSharp" version="5.0.41" targetFramework="net461" developmentDependency="true" />
   <package id="PostSharp.Redist" version="5.0.41" targetFramework="net461" />
 </packages>
