--- a/CacheApi/App.config
+++ b/CacheApi/App.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <appSettings>
+    <add key="RedisCache_server" value="greeneye.redistogo.com" />
+    <add key="RedisCache_port" value="9312" />
+    <add key="RedisCache_name" value="redistogo" />
+    <add key="RedisCache_password" value="d9ed209194acacb47dbdc58b0c42f556" />
+    <add key="RedisCache_ssl" value="false" />
+  </appSettings>
 </configuration>
