--- a/TestaCache/TestaCache.csproj
+++ b/TestaCache/TestaCache.csproj
@@ -48,6 +48,7 @@
       <HintPath>..\packages\StackExchange.Redis.1.2.6\lib\net46\StackExchange.Redis.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Runtime.Caching" />
@@ -58,10 +59,10 @@
     <Compile Include="Cache\ClearFullCacheAttribute.cs" />
     <Compile Include="Cache\MethodResultCache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Redis\RedisConfigurationModel.cs" />
     <Compile Include="Redis\RedisCacheableResultAttribute.cs" />
+    <Compile Include="Redis\RedisConfiguration.cs" />
     <Compile Include="Redis\RedisConnectorHelper.cs" />
-    <Compile Include="Redis\RedisDictionary.cs" />
-    <Compile Include="Redis\RedisList.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
