Cache Clear and Invalidate with Redis

--- a/CacheApi/CacheApi.csproj
+++ b/CacheApi/CacheApi.csproj
@@ -60,7 +60,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClearService.cs" />
     <Compile Include="Customer.cs" />
+    <Compile Include="ClearController.cs" />
     <Compile Include="CustomerController.cs" />
     <Compile Include="CustomerService.cs" />
     <Compile Include="Program.cs" />
