--- a/TestaCache/TestaCache.csproj
+++ b/TestaCache/TestaCache.csproj
@@ -54,13 +54,15 @@
     <Reference Include="System.Runtime.Caching" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cache\AffectedCacheableMethodsAttribute.cs" />
-    <Compile Include="Cache\CacheableResultAttribute.cs" />
-    <Compile Include="Cache\ClearFullCacheAttribute.cs" />
-    <Compile Include="Cache\MethodResultCache.cs" />
+    <Compile Include="MemoryCache\Attributes\AffectedCacheableMethodsAttribute.cs" />
+    <Compile Include="MemoryCache\Attributes\CacheableResultAttribute.cs" />
+    <Compile Include="MemoryCache\Attributes\ClearFullCacheAttribute.cs" />
+    <Compile Include="MemoryCache\MethodResultCache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Redis\Attributes\RedisClearFullCacheAttribute.cs" />
+    <Compile Include="Redis\Attributes\RedisInvalidateAttribute.cs" />
     <Compile Include="Redis\RedisConfigurationModel.cs" />
-    <Compile Include="Redis\RedisCacheableResultAttribute.cs" />
+    <Compile Include="Redis\Attributes\RedisCacheableResultAttribute.cs" />
     <Compile Include="Redis\RedisConfiguration.cs" />
     <Compile Include="Redis\RedisConnectorHelper.cs" />
   </ItemGroup>
