--- a/TestaCache/TestaCache.nuspec
+++ b/TestaCache/TestaCache.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>$id$</id>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <title>$title$</title>
     <authors>Thiago Loureiro</authors>
     <owners>$author$</owners>
@@ -10,8 +10,14 @@
     <iconUrl>https://raw.githubusercontent.com/thiagoloureiro/TestaCache/master/cache-icon.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Release of TestaCache</releaseNotes>
+    <releaseNotes>Fixed Nuget Dependencies</releaseNotes>
     <copyright>Copyright 2017</copyright>
-    <tags>Cache with Redis and MemoryCache</tags>
+    <dependencies>
+      <dependency id="PostSharp" version="5.0.41"/>
+	  <dependency id="PostSharp.Redist" version="5.0.41"/>
+	  <dependency id="Newtonsoft.Json" version="10.0.3"/>
+	  <dependency id="StackExchange.Redis" version="1.2.6"/>
+    </dependencies>
+	 <tags>Cache with Redis and MemoryCache</tags>
   </metadata>
 </package>
