--- a/TestaCache/TestaCache.nuspec
+++ b/TestaCache/TestaCache.nuspec
@@ -2,12 +2,12 @@
 <package >
   <metadata>
     <id>$id$</id>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <title>$title$</title>
     <authors>Thiago Loureiro</authors>
     <owners>$author$</owners>
     <projectUrl>https://github.com/thiagoloureiro/TestaCache</projectUrl>
-    <iconUrl>https://raw.githubusercontent.com/thiagoloureiro/TestaCache/master/cache-icon.png</iconUrl>
+    <iconUrl>https://github.com/thiagoloureiro/TestaCache/blob/master/TestaCache/cache-ico.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>Fixed Nuget Dependencies</releaseNotes>
