--- a/CacheApi/CacheApi.csproj
+++ b/CacheApi/CacheApi.csproj
@@ -11,7 +11,8 @@
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <NuGetPackageImportStamp></NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -35,8 +36,8 @@
   <ItemGroup>
     <PackageReference Include="Nancy" Version="1.4.4" />
     <PackageReference Include="Nancy.Hosting.Self" Version="1.4.1" />
-    <PackageReference Include="PostSharp" Version="5.0.41" />
-    <PackageReference Include="PostSharp.Redist" Version="5.0.41" />
+    <PackageReference Include="PostSharp" Version="5.0.48" />
+    <PackageReference Include="PostSharp.Redist" Version="5.0.48" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
