--- a/TestaCache.Standard/TestaCache.Standard.csproj
+++ b/TestaCache.Standard/TestaCache.Standard.csproj
@@ -2,6 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>1.0.6</Version>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <RepositoryUrl>https://github.com/thiagoloureiro/TestaCache</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/thiagoloureiro/TestaCache</PackageProjectUrl>
+    <Description>.NET Component to implement cache in your application Cache using MemoryCache or Redis in C#</Description>
+    <PackageIconUrl>https://raw.githubusercontent.com/thiagoloureiro/TestaCache/master/cache-icon.png</PackageIconUrl>
+    <Authors>Thiago Loureiro</Authors>
+    <Product>TestaCache</Product>
+    <PackageId>TestaCache</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
