--- a/API.NetCore/API.NetCore.csproj
+++ b/API.NetCore/API.NetCore.csproj
@@ -2,6 +2,20 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <Version>1.0.0</Version>
+    <Authors>Thiago Loureiro</Authors>
+    <PackageProjectUrl>https://github.com/thiagoloureiro/TestaCache</PackageProjectUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/thiagoloureiro/TestaCache/master/TestaCache/cache-ico.png</PackageIconUrl>
+    <RepositoryUrl>https://github.com/thiagoloureiro/TestaCache</RepositoryUrl>
+    <RepositoryType>GitHub</RepositoryType>
+    <PackageReleaseNotes>Support to .NET Core / .NET Standard 2.0</PackageReleaseNotes>
+    <PackageId>TestaCache.NetCore</PackageId>
+    <Description>Cache Framework for MemoryCache and Distributed Cache (Redis)</Description>
+    <Copyright />
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
