--- a/TestaCache/TestaCache.nuspec
+++ b/TestaCache/TestaCache.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>$id$</id>
-    <version>1.0.2</version>
+    <version>1.0.6</version>
     <title>$title$</title>
     <authors>Thiago Loureiro</authors>
     <owners>$author$</owners>
@@ -10,12 +10,12 @@
     <iconUrl>https://github.com/thiagoloureiro/TestaCache/blob/master/TestaCache/cache-ico.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Fixed Nuget Dependencies</releaseNotes>
+    <releaseNotes>Added Support to Single Objects</releaseNotes>
     <copyright>Copyright 2017</copyright>
     <dependencies>
-      <dependency id="PostSharp" version="5.0.41"/>
-	  <dependency id="PostSharp.Redist" version="5.0.41"/>
-	  <dependency id="Newtonsoft.Json" version="10.0.3"/>
+      <dependency id="PostSharp" version="5.0.50"/>
+	  <dependency id="PostSharp.Redist" version="5.0.50"/>
+	  <dependency id="Newtonsoft.Json" version="11.0.2"/>
 	  <dependency id="StackExchange.Redis" version="1.2.6"/>
     </dependencies>
 	 <tags>Cache with Redis and MemoryCache</tags>
